<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp">

    <LinearLayout
        android:id="@+id/nav_header_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/green_bg"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="100"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_header"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/nav_header_image"
                app:srcCompat="@drawable/me" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight="80"
            android:gravity="bottom"
            android:orientation="vertical">


            <TextView
                android:id="@+id/txt_header_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_id"
                android:textColor="@color/white"
                android:textSize="@dimen/header_font_size" />

            <TextView
                android:id="@+id/txt_header_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_name"
                android:textColor="@color/white"
                android:textSize="@dimen/header_font_size" />

            <!--
                    <TextView
                        android:id="@+id/txt_header_bd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="08/04/2000"
                        android:textColor="@color/white"
                        android:textSize="@dimen/header_font_size" />
            -->

            <TextView
                android:id="@+id/txt_header_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_email"
                android:textColor="@color/white"
                android:textSize="@dimen/header_font_size" />

            <TextView
                android:id="@+id/txt_header_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_major"
                android:textColor="@color/white"
                android:textSize="@dimen/header_font_size" />

        </LinearLayout>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/spinner_nav_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateDrawable="@drawable/custom_progress"
        android:visibility="gone" />

</FrameLayout>