<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextId"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_custom"
        android:ems="10"
        android:inputType="number"
        android:textCursorDrawable="@drawable/cur_pen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_custom"
        android:ems="10"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/cur_pen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextId" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRemember"
        app:layout_constraintVertical_bias="0.0">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_custom"
            android:text="@string/login_label"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/spinner_login"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end|center_vertical"
            android:elevation="3dp"
            android:layout_marginEnd="15dp"
            android:indeterminateDrawable="@drawable/custom_progress" />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtIdLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="4dp"
        android:text="@string/msv_edit_label"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/editTextId"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPassLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/pass_edit_label"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBoxRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:text="@string/remem_ckbx_label"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>